Test/exceptions/ParseErrors.dfy.expect
ParseErrors.dfy(8,20): Error: this symbol not expected in VarDeclStatement
ParseErrors.dfy(14,9): Error: semicolon expected
2 parse errors detected in ParseErrors.dfy
